tests/compile_fail/.clangd
# Intentionally-invalid sources for check_compile_fail.sh
Diagnostics:
  Suppress: '*'
